# InstantCryptoRate

./: .gitignore  .isort.cfg  .pylintrc  Makefile  README.md  docker-compose.dependencies.yml  pyproject.toml
src/: utils.py
src/api/: app.py  serializer.py  utils.py
src/api/cache/: __init__.py  cache.py  utils.py
src/api/handlers/: __init__.py  convert.py  utils.py
src/api/models/: __init__.py  convert.py
src/client/: app.py
src/client/providers/: repository.py
src/client/providers/base/: __init__.py  base_exchange.py  models.py
src/client/providers/binance/: __init__.py  exchange.py
src/client/providers/ku_coin/: __init__.py  exchange.py
